@@ -35,7 +35,8 @@ along with this software (see the LICENSE.md file). If not, see
 
     <!-- An artifact group for remote SystemMessage calls; members of other groups like remote API only groups would use this as well -->
     <moqui.security.ArtifactGroup artifactGroupId="SystemMessageServices" description="SystemMessage Services"/>
-    <moqui.security.ArtifactGroupMember artifactGroupId="SystemMessageServices" artifactName="org.moqui.impl.SystemMessageServices.receive#SystemMessage"
+    <moqui.security.ArtifactGroupMember artifactGroupId="SystemMessageServices"
+            artifactName="org.moqui.impl.SystemMessageServices.receive#IncomingSystemMessage"
             nameIsPattern="N" artifactTypeEnumId="AT_SERVICE" inheritAuthz="Y"/>
     <moqui.security.ArtifactAuthz artifactAuthzId="SystemMessageServicesADMIN" userGroupId="ADMIN" artifactGroupId="SystemMessageServices"
             authzTypeEnumId="AUTHZT_ALWAYS" authzActionEnumId="AUTHZA_ALL"/>
