@@ -93,7 +93,7 @@ along with this software (see the LICENSE.md file). If not, see
             dependents="N"/>
 
     <!-- ========== SystemMessage Example ========== -->
-    <!-- NOTE: empty receiveServiceName to use the default, org.moqui.impl.SystemMessageServices.receive#SystemMessage,
+    <!-- NOTE: empty receiveServiceName to use the default, org.moqui.impl.SystemMessageServices.receive#IncomingSystemMessage,
         in the send#SystemMessageJsonRpc service -->
     <moqui.service.message.SystemMessageType systemMessageTypeId="ExampleMessage" description="Example Message"
             produceServiceName="org.moqui.example.ExampleServices.send#ExampleMessage"
